--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,6 @@
 .onboard-background {
   height: 100%;
   width: 100%;
-  background: rgba(0, 0, 0, 0.35);
   position: absolute;
   top: 0;
   bottom: 0;
@@ -10,14 +9,56 @@
   transition: all 0.35s ease;
   display: block;
   z-index: 1;
+  pointer-events: none;
   &.inactive {
     opacity: 0;
-    pointer-events: none;
+  }
+}
+.onboard-hint {
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.35s ease;
+  transform: scale(0);
+}
+.onboard-dialogue-hint {
+  height: auto;
+  background-color: white;
+  width: auto;
+  max-width: 350px;
+  min-height: 75px;
+  border-radius: 10px;
+  border: 1px solid black;
+  .onboard-hint-wrapper {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    padding: 25px;
+    height: 100%;
+    width: 100%;
+    span {
+      margin-bottom: 10px;
+    }
+  }
+}
+.onboard-image-hint {
+  max-width: 350px;
+  min-height: 50px;
+  .onboard-hint-wrapper {
+    height: 100%;
+    width: 100%;
+    img {
+      height: 100%;
+      width: 100%;
+    }
   }
 }
 .active-sequence {
-  background: orange;
-  display: block;
-  position: relative;
   z-index: 2;
+  opacity: 1;
+  transform: scale(1.25);
+  pointer-events: all;
+  @media (prefers-reduced-motion: reduce) {
+    transform: scale(1);
+  }
 }
